AUTO/ROMANA/AN3/SEM2/LFT/LFT/ly/examples/y.output
   0  $accept : file $end

   1  primary_expr : identifier
   2               | CONSTANT
   3               | STRING_LITERAL
   4               | '(' expr ')'

   5  postfix_expr : primary_expr
   6               | postfix_expr '[' expr ']'
   7               | postfix_expr '(' ')'
   8               | postfix_expr '(' argument_expr_list ')'
   9               | postfix_expr '.' identifier
  10               | postfix_expr PTR_OP identifier
  11               | postfix_expr INC_OP
  12               | postfix_expr DEC_OP

  13  argument_expr_list : assignment_expr
  14                     | argument_expr_list ',' assignment_expr

  15  unary_expr : postfix_expr
  16             | INC_OP unary_expr
  17             | DEC_OP unary_expr
  18             | unary_operator cast_expr
  19             | SIZEOF unary_expr
  20             | SIZEOF '(' type_name ')'

  21  unary_operator : '&'
  22                 | '*'
  23                 | '+'
  24                 | '-'
  25                 | '~'
  26                 | '!'

  27  cast_expr : unary_expr
  28            | '(' type_name ')' cast_expr

  29  multiplicative_expr : cast_expr
  30                      | multiplicative_expr '*' cast_expr
  31                      | multiplicative_expr '/' cast_expr
  32                      | multiplicative_expr '%' cast_expr

  33  additive_expr : multiplicative_expr
  34                | additive_expr '+' multiplicative_expr
  35                | additive_expr '-' multiplicative_expr

  36  shift_expr : additive_expr
  37             | shift_expr LEFT_OP additive_expr
  38             | shift_expr RIGHT_OP additive_expr

  39  relational_expr : shift_expr
  40                  | relational_expr '<' shift_expr
  41                  | relational_expr '>' shift_expr
  42                  | relational_expr LE_OP shift_expr
  43                  | relational_expr GE_OP shift_expr

  44  equality_expr : relational_expr
  45                | equality_expr EQ_OP relational_expr
  46                | equality_expr NE_OP relational_expr

  47  and_expr : equality_expr
  48           | and_expr '&' equality_expr

  49  exclusive_or_expr : and_expr
  50                    | exclusive_or_expr '^' and_expr

  51  inclusive_or_expr : exclusive_or_expr
  52                    | inclusive_or_expr '|' exclusive_or_expr

  53  logical_and_expr : inclusive_or_expr
  54                   | logical_and_expr AND_OP inclusive_or_expr

  55  logical_or_expr : logical_and_expr
  56                  | logical_or_expr OR_OP logical_and_expr

  57  conditional_expr : logical_or_expr
  58                   | logical_or_expr '?' logical_or_expr ':' conditional_expr

  59  assignment_expr : conditional_expr
  60                  | unary_expr assignment_operator assignment_expr

  61  assignment_operator : '='
  62                      | MUL_ASSIGN
  63                      | DIV_ASSIGN
  64                      | MOD_ASSIGN
  65                      | ADD_ASSIGN
  66                      | SUB_ASSIGN
  67                      | LEFT_ASSIGN
  68                      | RIGHT_ASSIGN
  69                      | AND_ASSIGN
  70                      | XOR_ASSIGN
  71                      | OR_ASSIGN

  72  expr : assignment_expr
  73       | expr ',' assignment_expr

  74  constant_expr : conditional_expr

  75  declaration : declaration_specifiers ';'
  76              | declaration_specifiers init_declarator_list ';'

  77  declaration_specifiers : storage_class_specifier
  78                         | storage_class_specifier declaration_specifiers
  79                         | type_specifier
  80                         | type_specifier declaration_specifiers

  81  init_declarator_list : init_declarator
  82                       | init_declarator_list ',' init_declarator

  83  init_declarator : declarator
  84                  | declarator '=' initializer

  85  storage_class_specifier : TYPEDEF
  86                          | EXTERN
  87                          | STATIC
  88                          | AUTO
  89                          | REGISTER

  90  type_specifier : CHAR
  91                 | SHORT
  92                 | INT
  93                 | LONG
  94                 | SIGNED
  95                 | UNSIGNED
  96                 | FLOAT
  97                 | DOUBLE
  98                 | CONST
  99                 | VOLATILE
 100                 | VOID
 101                 | struct_or_union_specifier
 102                 | enum_specifier
 103                 | TYPE_NAME

 104  struct_or_union_specifier : struct_or_union identifier '{' struct_declaration_list '}'
 105                            | struct_or_union '{' struct_declaration_list '}'
 106                            | struct_or_union identifier

 107  struct_or_union : STRUCT
 108                  | UNION

 109  struct_declaration_list : struct_declaration
 110                          | struct_declaration_list struct_declaration

 111  struct_declaration : type_specifier_list struct_declarator_list ';'

 112  struct_declarator_list : struct_declarator
 113                         | struct_declarator_list ',' struct_declarator

 114  struct_declarator : declarator
 115                    | ':' constant_expr
 116                    | declarator ':' constant_expr

 117  enum_specifier : ENUM '{' enumerator_list '}'
 118                 | ENUM identifier '{' enumerator_list '}'
 119                 | ENUM identifier

 120  enumerator_list : enumerator
 121                  | enumerator_list ',' enumerator

 122  enumerator : identifier
 123             | identifier '=' constant_expr

 124  declarator : declarator2
 125             | pointer declarator2

 126  declarator2 : identifier
 127              | '(' declarator ')'
 128              | declarator2 '[' ']'
 129              | declarator2 '[' constant_expr ']'
 130              | declarator2 '(' ')'
 131              | declarator2 '(' parameter_type_list ')'
 132              | declarator2 '(' parameter_identifier_list ')'

 133  pointer : '*'
 134          | '*' type_specifier_list
 135          | '*' pointer
 136          | '*' type_specifier_list pointer

 137  type_specifier_list : type_specifier
 138                      | type_specifier_list type_specifier

 139  parameter_identifier_list : identifier_list
 140                            | identifier_list ',' ELIPSIS

 141  identifier_list : identifier
 142                  | identifier_list ',' identifier

 143  parameter_type_list : parameter_list
 144                      | parameter_list ',' ELIPSIS

 145  parameter_list : parameter_declaration
 146                 | parameter_list ',' parameter_declaration

 147  parameter_declaration : type_specifier_list declarator
 148                        | type_name

 149  type_name : type_specifier_list
 150            | type_specifier_list abstract_declarator

 151  abstract_declarator : pointer
 152                      | abstract_declarator2
 153                      | pointer abstract_declarator2

 154  abstract_declarator2 : '(' abstract_declarator ')'
 155                       | '[' ']'
 156                       | '[' constant_expr ']'
 157                       | abstract_declarator2 '[' ']'
 158                       | abstract_declarator2 '[' constant_expr ']'
 159                       | '(' ')'
 160                       | '(' parameter_type_list ')'
 161                       | abstract_declarator2 '(' ')'
 162                       | abstract_declarator2 '(' parameter_type_list ')'

 163  initializer : assignment_expr
 164              | '{' initializer_list '}'
 165              | '{' initializer_list ',' '}'

 166  initializer_list : initializer
 167                   | initializer_list ',' initializer

 168  statement : labeled_statement
 169            | compound_statement
 170            | expression_statement
 171            | selection_statement
 172            | iteration_statement
 173            | jump_statement

 174  labeled_statement : identifier ':' statement
 175                    | CASE constant_expr ':' statement
 176                    | DEFAULT ':' statement

 177  compound_statement : '{' '}'
 178                     | '{' statement_list '}'
 179                     | '{' declaration_list '}'
 180                     | '{' declaration_list statement_list '}'

 181  declaration_list : declaration
 182                   | declaration_list declaration

 183  statement_list : statement
 184                 | statement_list statement

 185  expression_statement : ';'
 186                       | expr ';'

 187  selection_statement : IF '(' expr ')' statement
 188                      | IF '(' expr ')' statement ELSE statement
 189                      | SWITCH '(' expr ')' statement

 190  iteration_statement : WHILE '(' expr ')' statement
 191                      | DO statement WHILE '(' expr ')' ';'
 192                      | FOR '(' ';' ';' ')' statement
 193                      | FOR '(' ';' ';' expr ')' statement
 194                      | FOR '(' ';' expr ';' ')' statement
 195                      | FOR '(' ';' expr ';' expr ')' statement
 196                      | FOR '(' expr ';' ';' ')' statement
 197                      | FOR '(' expr ';' ';' expr ')' statement
 198                      | FOR '(' expr ';' expr ';' ')' statement
 199                      | FOR '(' expr ';' expr ';' expr ')' statement

 200  jump_statement : GOTO identifier ';'
 201                 | CONTINUE ';'
 202                 | BREAK ';'
 203                 | RETURN ';'
 204                 | RETURN expr ';'

 205  file : external_definition
 206       | file external_definition

 207  external_definition : function_definition
 208                      | declaration

 209  function_definition : declarator function_body
 210                      | declaration_specifiers declarator function_body

 211  function_body : compound_statement
 212                | declaration_list compound_statement

 213  identifier : IDENTIFIER

state 0
	$accept : . file $end  (0)

	IDENTIFIER  shift 1
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'('  shift 22
	'*'  shift 23
	.  error

	file  goto 24
	identifier  goto 25
	declaration  goto 26
	declaration_specifiers  goto 27
	storage_class_specifier  goto 28
	type_specifier  goto 29
	declarator  goto 30
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	declarator2  goto 34
	pointer  goto 35
	external_definition  goto 36
	function_definition  goto 37


state 1
	identifier : IDENTIFIER .  (213)

	.  reduce 213


state 2
	type_specifier : TYPE_NAME .  (103)

	.  reduce 103


state 3
	storage_class_specifier : TYPEDEF .  (85)

	.  reduce 85


state 4
	storage_class_specifier : EXTERN .  (86)

	.  reduce 86


state 5
	storage_class_specifier : STATIC .  (87)

	.  reduce 87


state 6
	storage_class_specifier : AUTO .  (88)

	.  reduce 88


state 7
	storage_class_specifier : REGISTER .  (89)

	.  reduce 89


state 8
	type_specifier : CHAR .  (90)

	.  reduce 90


state 9
	type_specifier : SHORT .  (91)

	.  reduce 91


state 10
	type_specifier : INT .  (92)

	.  reduce 92


state 11
	type_specifier : LONG .  (93)

	.  reduce 93


state 12
	type_specifier : SIGNED .  (94)

	.  reduce 94


state 13
	type_specifier : UNSIGNED .  (95)

	.  reduce 95


state 14
	type_specifier : FLOAT .  (96)

	.  reduce 96


state 15
	type_specifier : DOUBLE .  (97)

	.  reduce 97


state 16
	type_specifier : CONST .  (98)

	.  reduce 98


state 17
	type_specifier : VOLATILE .  (99)

	.  reduce 99


state 18
	type_specifier : VOID .  (100)

	.  reduce 100


state 19
	struct_or_union : STRUCT .  (107)

	.  reduce 107


state 20
	struct_or_union : UNION .  (108)

	.  reduce 108


state 21
	enum_specifier : ENUM . '{' enumerator_list '}'  (117)
	enum_specifier : ENUM . identifier '{' enumerator_list '}'  (118)
	enum_specifier : ENUM . identifier  (119)

	IDENTIFIER  shift 1
	'{'  shift 38
	.  error

	identifier  goto 39


state 22
	declarator2 : '(' . declarator ')'  (127)

	IDENTIFIER  shift 1
	'('  shift 22
	'*'  shift 23
	.  error

	identifier  goto 25
	declarator  goto 40
	declarator2  goto 34
	pointer  goto 35


state 23
	pointer : '*' .  (133)
	pointer : '*' . type_specifier_list  (134)
	pointer : '*' . pointer  (135)
	pointer : '*' . type_specifier_list pointer  (136)

	TYPE_NAME  shift 2
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'*'  shift 23
	IDENTIFIER  reduce 133
	'('  reduce 133
	')'  reduce 133
	'['  reduce 133
	','  reduce 133

	type_specifier  goto 41
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	type_specifier_list  goto 42
	pointer  goto 43


state 24
	$accept : file . $end  (0)
	file : file . external_definition  (206)

	$end  accept
	IDENTIFIER  shift 1
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'('  shift 22
	'*'  shift 23
	.  error

	identifier  goto 25
	declaration  goto 26
	declaration_specifiers  goto 27
	storage_class_specifier  goto 28
	type_specifier  goto 29
	declarator  goto 30
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	declarator2  goto 34
	pointer  goto 35
	external_definition  goto 44
	function_definition  goto 37


state 25
	declarator2 : identifier .  (126)

	.  reduce 126


state 26
	external_definition : declaration .  (208)

	.  reduce 208


state 27
	declaration : declaration_specifiers . ';'  (75)
	declaration : declaration_specifiers . init_declarator_list ';'  (76)
	function_definition : declaration_specifiers . declarator function_body  (210)

	IDENTIFIER  shift 1
	'('  shift 22
	'*'  shift 23
	';'  shift 45
	.  error

	identifier  goto 25
	init_declarator_list  goto 46
	init_declarator  goto 47
	declarator  goto 48
	declarator2  goto 34
	pointer  goto 35


state 28
	declaration_specifiers : storage_class_specifier .  (77)
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (78)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	IDENTIFIER  reduce 77
	'('  reduce 77
	'*'  reduce 77
	';'  reduce 77

	declaration_specifiers  goto 49
	storage_class_specifier  goto 28
	type_specifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33


state 29
	declaration_specifiers : type_specifier .  (79)
	declaration_specifiers : type_specifier . declaration_specifiers  (80)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	IDENTIFIER  reduce 79
	'('  reduce 79
	'*'  reduce 79
	';'  reduce 79

	declaration_specifiers  goto 50
	storage_class_specifier  goto 28
	type_specifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33


state 30
	function_definition : declarator . function_body  (209)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'{'  shift 51
	.  error

	declaration  goto 52
	declaration_specifiers  goto 53
	storage_class_specifier  goto 28
	type_specifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	compound_statement  goto 54
	declaration_list  goto 55
	function_body  goto 56


state 31
	type_specifier : struct_or_union_specifier .  (101)

	.  reduce 101


state 32
	type_specifier : enum_specifier .  (102)

	.  reduce 102


state 33
	struct_or_union_specifier : struct_or_union . identifier '{' struct_declaration_list '}'  (104)
	struct_or_union_specifier : struct_or_union . '{' struct_declaration_list '}'  (105)
	struct_or_union_specifier : struct_or_union . identifier  (106)

	IDENTIFIER  shift 1
	'{'  shift 57
	.  error

	identifier  goto 58


state 34
	declarator : declarator2 .  (124)
	declarator2 : declarator2 . '[' ']'  (128)
	declarator2 : declarator2 . '[' constant_expr ']'  (129)
	declarator2 : declarator2 . '(' ')'  (130)
	declarator2 : declarator2 . '(' parameter_type_list ')'  (131)
	declarator2 : declarator2 . '(' parameter_identifier_list ')'  (132)

	'('  shift 59
	'['  shift 60
	TYPE_NAME  reduce 124
	TYPEDEF  reduce 124
	EXTERN  reduce 124
	STATIC  reduce 124
	AUTO  reduce 124
	REGISTER  reduce 124
	CHAR  reduce 124
	SHORT  reduce 124
	INT  reduce 124
	LONG  reduce 124
	SIGNED  reduce 124
	UNSIGNED  reduce 124
	FLOAT  reduce 124
	DOUBLE  reduce 124
	CONST  reduce 124
	VOLATILE  reduce 124
	VOID  reduce 124
	STRUCT  reduce 124
	UNION  reduce 124
	ENUM  reduce 124
	')'  reduce 124
	','  reduce 124
	':'  reduce 124
	'='  reduce 124
	';'  reduce 124
	'{'  reduce 124


state 35
	declarator : pointer . declarator2  (125)

	IDENTIFIER  shift 1
	'('  shift 22
	.  error

	identifier  goto 25
	declarator2  goto 61


state 36
	file : external_definition .  (205)

	.  reduce 205


state 37
	external_definition : function_definition .  (207)

	.  reduce 207


state 38
	enum_specifier : ENUM '{' . enumerator_list '}'  (117)

	IDENTIFIER  shift 1
	.  error

	identifier  goto 62
	enumerator_list  goto 63
	enumerator  goto 64


state 39
	enum_specifier : ENUM identifier . '{' enumerator_list '}'  (118)
	enum_specifier : ENUM identifier .  (119)

	'{'  shift 65
	IDENTIFIER  reduce 119
	TYPE_NAME  reduce 119
	TYPEDEF  reduce 119
	EXTERN  reduce 119
	STATIC  reduce 119
	AUTO  reduce 119
	REGISTER  reduce 119
	CHAR  reduce 119
	SHORT  reduce 119
	INT  reduce 119
	LONG  reduce 119
	SIGNED  reduce 119
	UNSIGNED  reduce 119
	FLOAT  reduce 119
	DOUBLE  reduce 119
	CONST  reduce 119
	VOLATILE  reduce 119
	VOID  reduce 119
	STRUCT  reduce 119
	UNION  reduce 119
	ENUM  reduce 119
	'('  reduce 119
	')'  reduce 119
	'['  reduce 119
	','  reduce 119
	'*'  reduce 119
	':'  reduce 119
	';'  reduce 119


state 40
	declarator2 : '(' declarator . ')'  (127)

	')'  shift 66
	.  error


state 41
	type_specifier_list : type_specifier .  (137)

	.  reduce 137


state 42
	pointer : '*' type_specifier_list .  (134)
	pointer : '*' type_specifier_list . pointer  (136)
	type_specifier_list : type_specifier_list . type_specifier  (138)

	TYPE_NAME  shift 2
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'*'  shift 23
	IDENTIFIER  reduce 134
	'('  reduce 134
	')'  reduce 134
	'['  reduce 134
	','  reduce 134

	type_specifier  goto 67
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	pointer  goto 68


state 43
	pointer : '*' pointer .  (135)

	.  reduce 135


state 44
	file : file external_definition .  (206)

	.  reduce 206


state 45
	declaration : declaration_specifiers ';' .  (75)

	.  reduce 75


state 46
	declaration : declaration_specifiers init_declarator_list . ';'  (76)
	init_declarator_list : init_declarator_list . ',' init_declarator  (82)

	','  shift 69
	';'  shift 70
	.  error


state 47
	init_declarator_list : init_declarator .  (81)

	.  reduce 81


state 48
	init_declarator : declarator .  (83)
	init_declarator : declarator . '=' initializer  (84)
	function_definition : declaration_specifiers declarator . function_body  (210)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'='  shift 71
	'{'  shift 51
	','  reduce 83
	';'  reduce 83

	declaration  goto 52
	declaration_specifiers  goto 53
	storage_class_specifier  goto 28
	type_specifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	compound_statement  goto 54
	declaration_list  goto 55
	function_body  goto 72


state 49
	declaration_specifiers : storage_class_specifier declaration_specifiers .  (78)

	.  reduce 78


state 50
	declaration_specifiers : type_specifier declaration_specifiers .  (80)

	.  reduce 80


state 51
	compound_statement : '{' . '}'  (177)
	compound_statement : '{' . statement_list '}'  (178)
	compound_statement : '{' . declaration_list '}'  (179)
	compound_statement : '{' . declaration_list statement_list '}'  (180)

	IDENTIFIER  shift 1
	CONSTANT  shift 73
	STRING_LITERAL  shift 74
	SIZEOF  shift 75
	INC_OP  shift 76
	DEC_OP  shift 77
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	CASE  shift 78
	DEFAULT  shift 79
	IF  shift 80
	SWITCH  shift 81
	WHILE  shift 82
	DO  shift 83
	FOR  shift 84
	GOTO  shift 85
	CONTINUE  shift 86
	BREAK  shift 87
	RETURN  shift 88
	'('  shift 89
	'&'  shift 90
	'*'  shift 91
	'+'  shift 92
	'-'  shift 93
	'~'  shift 94
	'!'  shift 95
	';'  shift 96
	'{'  shift 51
	'}'  shift 97
	.  error

	primary_expr  goto 98
	identifier  goto 99
	expr  goto 100
	postfix_expr  goto 101
	assignment_expr  goto 102
	unary_expr  goto 103
	unary_operator  goto 104
	cast_expr  goto 105
	multiplicative_expr  goto 106
	additive_expr  goto 107
	shift_expr  goto 108
	relational_expr  goto 109
	equality_expr  goto 110
	and_expr  goto 111
	exclusive_or_expr  goto 112
	inclusive_or_expr  goto 113
	logical_and_expr  goto 114
	logical_or_expr  goto 115
	conditional_expr  goto 116
	declaration  goto 52
	declaration_specifiers  goto 53
	storage_class_specifier  goto 28
	type_specifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	statement  goto 117
	labeled_statement  goto 118
	compound_statement  goto 119
	expression_statement  goto 120
	selection_statement  goto 121
	iteration_statement  goto 122
	jump_statement  goto 123
	statement_list  goto 124
	declaration_list  goto 125


state 52
	declaration_list : declaration .  (181)

	.  reduce 181


state 53
	declaration : declaration_specifiers . ';'  (75)
	declaration : declaration_specifiers . init_declarator_list ';'  (76)

	IDENTIFIER  shift 1
	'('  shift 22
	'*'  shift 23
	';'  shift 45
	.  error

	identifier  goto 25
	init_declarator_list  goto 46
	init_declarator  goto 47
	declarator  goto 126
	declarator2  goto 34
	pointer  goto 35


state 54
	function_body : compound_statement .  (211)

	.  reduce 211


state 55
	declaration_list : declaration_list . declaration  (182)
	function_body : declaration_list . compound_statement  (212)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'{'  shift 51
	.  error

	declaration  goto 127
	declaration_specifiers  goto 53
	storage_class_specifier  goto 28
	type_specifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	compound_statement  goto 128


state 56
	function_definition : declarator function_body .  (209)

	.  reduce 209


state 57
	struct_or_union_specifier : struct_or_union '{' . struct_declaration_list '}'  (105)

	TYPE_NAME  shift 2
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	.  error

	type_specifier  goto 41
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	struct_declaration_list  goto 129
	struct_declaration  goto 130
	type_specifier_list  goto 131


state 58
	struct_or_union_specifier : struct_or_union identifier . '{' struct_declaration_list '}'  (104)
	struct_or_union_specifier : struct_or_union identifier .  (106)

	'{'  shift 132
	IDENTIFIER  reduce 106
	TYPE_NAME  reduce 106
	TYPEDEF  reduce 106
	EXTERN  reduce 106
	STATIC  reduce 106
	AUTO  reduce 106
	REGISTER  reduce 106
	CHAR  reduce 106
	SHORT  reduce 106
	INT  reduce 106
	LONG  reduce 106
	SIGNED  reduce 106
	UNSIGNED  reduce 106
	FLOAT  reduce 106
	DOUBLE  reduce 106
	CONST  reduce 106
	VOLATILE  reduce 106
	VOID  reduce 106
	STRUCT  reduce 106
	UNION  reduce 106
	ENUM  reduce 106
	'('  reduce 106
	')'  reduce 106
	'['  reduce 106
	','  reduce 106
	'*'  reduce 106
	':'  reduce 106
	';'  reduce 106


state 59
	declarator2 : declarator2 '(' . ')'  (130)
	declarator2 : declarator2 '(' . parameter_type_list ')'  (131)
	declarator2 : declarator2 '(' . parameter_identifier_list ')'  (132)

	IDENTIFIER  shift 1
	TYPE_NAME  shift 2
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	')'  shift 133
	.  error

	identifier  goto 134
	type_name  goto 135
	type_specifier  goto 41
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	type_specifier_list  goto 136
	parameter_type_list  goto 137
	parameter_identifier_list  goto 138
	identifier_list  goto 139
	parameter_list  goto 140
	parameter_declaration  goto 141


state 60
	declarator2 : declarator2 '[' . ']'  (128)
	declarator2 : declarator2 '[' . constant_expr ']'  (129)

	IDENTIFIER  shift 1
	CONSTANT  shift 73
	STRING_LITERAL  shift 74
	SIZEOF  shift 75
	INC_OP  shift 76
	DEC_OP  shift 77
	'('  shift 89
	']'  shift 142
	'&'  shift 90
	'*'  shift 91
	'+'  shift 92
	'-'  shift 93
	'~'  shift 94
	'!'  shift 95
	.  error

	primary_expr  goto 98
	identifier  goto 143
	postfix_expr  goto 101
	unary_expr  goto 144
	unary_operator  goto 104
	cast_expr  goto 105
	multiplicative_expr  goto 106
	additive_expr  goto 107
	shift_expr  goto 108
	relational_expr  goto 109
	equality_expr  goto 110
	and_expr  goto 111
	exclusive_or_expr  goto 112
	inclusive_or_expr  goto 113
	logical_and_expr  goto 114
	logical_or_expr  goto 115
	conditional_expr  goto 145
	constant_expr  goto 146


state 61
	declarator : pointer declarator2 .  (125)
	declarator2 : declarator2 . '[' ']'  (128)
	declarator2 : declarator2 . '[' constant_expr ']'  (129)
	declarator2 : declarator2 . '(' ')'  (130)
	declarator2 : declarator2 . '(' parameter_type_list ')'  (131)
	declarator2 : declarator2 . '(' parameter_identifier_list ')'  (132)
